trunk/Archive2/d9/7f3504e3fcc035/output
main.cpp:5:1: error: C++ requires a type specifier for all declarations
name1[0] = name2[0];
^~~~~
main.cpp:5:7: error: zero size arrays are an extension [-Werror,-Wzero-length-array]
name1[0] = name2[0];
      ^
main.cpp:7:1: error: C++ requires a type specifier for all declarations
name2[0] = temp;
^~~~~
main.cpp:7:7: error: zero size arrays are an extension [-Werror,-Wzero-length-array]
name2[0] = temp;
      ^
main.cpp:9:1: error: C++ requires a type specifier for all declarations
printf("name1 = %s\n", name1);
^~~~~~
main.cpp:11:1: error: C++ requires a type specifier for all declarations
printf("name2 = %s\n", name2);
^~~~~~
6 errors generated.
